--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <body>
 
+<h1 style="text-align:center;font-family:georgia;color:#0000FF">Title</h1>
+
 	<a href="http://www.google.com.br">Bora googlar</a>
 	
 	<p>Isso ai...<p>
